# pyruvector

./: .gitignore  Cargo.toml  MANIFEST.in  pyproject.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: SUMMARY.txt  compare_vectordbs.py  conftest.py  example_quick_test.py  example_usage.py
benchmarks/core/: data_gen.py  metrics.py
benchmarks/suites/: insertion.py  mixed.py  search.py
examples/: advanced_filtering_demo.py  basic_usage.py  filtered_search.py  gnn_example.py  graph_database_example.py  persistence.py  snapshot_example.py
python/pyruvector/: __init__.py  _pyruvector.pyi
scripts/: validate_package.sh
src/: advanced_filter.rs  cluster.rs  collection.rs  db.rs  error.rs  filter.rs  gnn.rs  graph.rs  lib.rs  metrics.rs  router.rs  snapshot.rs  types.rs
tests/: conftest.py  test_advanced_filter.py  test_basic.py  test_batch.py  test_cluster.py  test_collection_manager.py  test_config.py  test_filters.py  test_gnn.py  test_graph.py  test_graph_fixes.py  test_metadata.py  test_metrics.py  test_persistence.py  test_router.py  test_snapshot.py
